--- a/mobileindex.html
+++ b/mobileindex.html
@@ -9,13 +9,14 @@
 		 </div>
 		<br><br>
 		<div class="background" id="navbar">
-			<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
-			<a href="mobilepoints.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
-			<a href="mobilemessages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
-			<a href="mobiledocs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
-		</div><br><br><br><br><br><br>
-		<a href="mobilesettings.html"><img draggable=false id="gears-icon" style="padding0px;" width=40px src="gears.png" align="left"></a>
-	  <p align="right"><a href="mobilepoints.html" id="balance">loading . . .</a></p>
+	<a href="mobileindex.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="messages.html"><img draggable=false id="messaging-icon" style="padding:50px;" width=50px src="timage.svg"></a>
+	<a href="docs.html"><img draggable=false id="docs-icon" style="padding:50px;" width=50px src="pen.png"></a>
+	<a href="programs.html"><img draggable=false id="archives-icon" style="padding:50px;" width=50px src="if_downloads_309074.png"></a>
+</div><br><br><br><br><br><br
+		<a href="settings.html"><img draggable=false id="gears-icon" style="padding0px;" width=40px src="gears.png" align="left"></a>
+	  <p align="right"><a href="points.html" id="balance">loading . . .</a></p>
 		<h1>Welcome to TiMedia!</h1>
 		<h2>Your data is safe!</h2>
 		<h4>Your documents are encrypted end to end, your data (like documents,messages,store purchases and more) is not visible to any admin or other user!</h4>
