--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,14 @@
 <center>
+<script>
+ var i = 0;
+	while (i < 10) {
+		if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
+		document.getElementsByClassName('author-name')[i].style = "color:gold;";
+		}
+		i++;
+	}
+ }
+ </script>
 <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
