--- a/chat.html
+++ b/chat.html
@@ -1,8 +1,19 @@
 <center>
 <script>
-   document.getElementById('hcb_form_name').value = getCookie("name");
+      document.getElementById('hcb_form_name').value = getCookie("name");
    document.getElementById('hcb_form_name').disabled = true;   
    }
+  
+ Element.prototype.remove = function() {
+    this.parentElement.removeChild(this);
+}
+NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
+    for(var i = this.length - 1; i >= 0; i--) {
+        if(this[i] && this[i].parentElement) {
+            this[i].parentElement.removeChild(this[i]);
+        }
+    }
+}
  </script>
 <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
