--- a/chat.html
+++ b/chat.html
@@ -7,6 +7,21 @@
 <!-- end comment box -->
 </center>
 <script>
+ function getCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(';');
+    for(var i = 0; i <ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+        }
+    }
+    return "";
+ }
       function changeName() {
       document.getElementById('hcb_form_name').value = getCookie("name");
    document.getElementById('hcb_form_name').disabled = true;   
