--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
  </div>
-<br><br>
-	<a href="beta/index.html"><button class="base btn2">Check out the new beta TiMedia site!</button></a>
+<br><br><br>
+	<a href="beta/index.html"><button class="base btn2">Check out the new beta TiMedia site!</button></a><br>
 <div id="access" style="padding:35px;">
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
