--- a/beta/index.html
+++ b/beta/index.html
@@ -58,7 +58,7 @@
     <div id="ti-bank-msg" class="jumbotron">
       <h1>Introducing TiBank</h1>
       <p>TiBank is the most secure way to store and spend your TiPoints.</p>
-      <button onclick="dismissTiBank" class="btn btn-primary">Dismiss</button>
+      <button onclick="dismissTiBank()" class="btn btn-primary">Dismiss</button>
 </div>
 
 <h1 id="points-balance">0 TiPoints</h1>
