--- a/beta/index.html
+++ b/beta/index.html
@@ -47,9 +47,11 @@
 <div class="container">
 <div id="home">
     <h3>Home</h3><br>
+  <center>
    <div id="HCB_comment_box">Loading comments...</div>
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 </div>
+  </center>
  <div style="display: none;" id="points">
     <h3>Points</h3><br>
     <div id="ti-bank-msg" class="jumbotron">
