--- a/beta/index.html
+++ b/beta/index.html
@@ -113,5 +113,6 @@ Final Balance<br><br>
     <script src="main.js"></script>
     <script src="docs.js"></script>
     <script src="points.js"></script>
+    <script src="db.js"></script>
   </body>
 </html>
