--- a/beta/index.html
+++ b/beta/index.html
@@ -80,7 +80,7 @@ Final Balance<br><br>
     <h3>TiDocs</h3><br>
 
     <div id="create">
-      <h1><blockquote style="outline: none;" id="content" contenteditable="true"></blockquote></h1>
+      <h1><p id="content" contenteditable="true"></p></h1>
 
       <!-- Trigger the modal with a button -->
       <button onclick="saveDoc()" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#saveModal">SAVE</button>
