--- a/beta/index.html
+++ b/beta/index.html
@@ -47,6 +47,24 @@
 <div class="container">
 <div id="home">
     <h3>Home</h3><br>
+  <script>
+    function changeName() {
+      document.getElementById('hcb_form_name').value = localStorage.name;
+   document.getElementById('hcb_form_name').disabled = true;   
+   }
+  
+ Element.prototype.remove = function() {
+    this.parentElement.removeChild(this);
+}
+NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
+    for(var i = this.length - 1; i >= 0; i--) {
+        if(this[i] && this[i].parentElement) {
+            this[i].parentElement.removeChild(this[i]);
+        }
+    }
+}
+setInterval(changeName, 50)
+  </script>
   <center>
    <div id="HCB_comment_box">Loading comments...</div>
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
