--- a/beta/index.html
+++ b/beta/index.html
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://proudloyaltier.github.io/timedia/beta/index.html">TiMedia <b>2 Beta</b></a>
+          <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
