--- a/beta/index.html
+++ b/beta/index.html
@@ -19,11 +19,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <center>
           <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
+          </center>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
               <ul class="dropdown-menu">
