--- a/beta/index.html
+++ b/beta/index.html
@@ -23,10 +23,11 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <--<li class="active"><a href="index.html">Home</a></li>-->
+            <!--<li class="active"><a href="index.html">Home</a></li>-->
             <li class="dropdown">
               <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><a href="index.html">Home </a></li>
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
