--- a/beta/index.html
+++ b/beta/index.html
@@ -38,6 +38,9 @@
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
+          <center>
+           <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
+          </center>
           <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
             <li><a href="logout.html"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
           </ul>
