--- a/beta/login.html
+++ b/beta/login.html
@@ -19,7 +19,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">TiMedia <b>2 Beta</b></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -27,12 +26,14 @@
             <li class="dropdown">
               <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><a href="index.html">Home </a></li>
                 <li><a href="index.html?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="index.html?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="index.html?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
               </ul>
             </li>
           </ul>
+          <a class="navbar-brand" href="#">TiMedia <b>2 Beta</b></a>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
