--- a/beta/index.html
+++ b/beta/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            
-            <li class="dropdown">
+            <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a
+             <li class="dropdown">
               <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html">Home </a></li>
@@ -37,9 +37,6 @@
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
-          <center>
-           <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
-          </center>
           <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
             <li><a href="logout.html"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
           </ul>
