--- a/beta/login.html
+++ b/beta/login.html
@@ -25,7 +25,7 @@
             <li class="dropdown">
               <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="index.html">Home </a></li>
+                <li><a href="index.html">Home <span class="glyphicon gliphicon-home"></span></a></li>
                 <li><a href="index.html?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="index.html?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="index.html?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
