--- a/beta/index.html
+++ b/beta/index.html
@@ -97,6 +97,22 @@ Final Balance<br><br>
     You have no messages.
   </div>
   
+ <ul class="nav nav-pills">
+    <li class="active"><a data-toggle="pill" href="#chat1">Chat 1</a></li>
+    <li><a data-toggle="pill" href="#chat2">Chat 2</a></li>
+  </ul>
+  
+  <div class="tab-content">
+    <div id="chat2" class="tab-pane fade in active">
+      <h3></h3>
+      <p></p>
+    </div>
+    <div id="chat1" class="tab-pane fade">
+      <h3></h3>
+      <p></p>
+    </div>
+  </div>
+  
  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Messages</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
