--- a/beta/index.html
+++ b/beta/index.html
@@ -100,11 +100,11 @@ Final Balance<br><br>
   
   <div class="tab-content">
     <div id="chat2" class="tab-pane fade in active">
-      <h3></h3>
+      <h3>chat2</h3>
       <p></p>
     </div>
     <div id="chat1" class="tab-pane fade">
-      <h3></h3>
+      <h3>chat1</h3>
       <p></p>
     </div>
   </div>
