--- a/beta/index.html
+++ b/beta/index.html
@@ -94,7 +94,7 @@ Final Balance<br><br>
     <h3>Messages</h3><br>
   
  <ul class="nav nav-pills">
-    <li class="active"><a data-toggle="pill" href="#chat1">Chat 1</a></li>
+    <li><a data-toggle="pill" href="#chat1">Chat 1</a></li>
     <li><a data-toggle="pill" href="#chat2">Chat 2</a></li>
   </ul>
   
