--- a/beta/index.html
+++ b/beta/index.html
@@ -108,7 +108,7 @@ Final Balance<br><br>
       <h3>chat2</h3>
       <p></p>
     </div>
-  </div>
+  </div><br>
   
   <button onclick="newConversation()" class="btn btn-primary">New Conversation</button>
   
