--- a/beta/index.html
+++ b/beta/index.html
@@ -93,12 +93,12 @@ Final Balance<br><br>
 <div style="display: none;" id="messages">
     <h3>Messages</h3><br>
   
- <ul class="nav nav-pills">
+ <ul id="tabs" class="nav nav-pills">
     <li><a data-toggle="pill" href="#chat1">Chat 1</a></li>
     <li><a data-toggle="pill" href="#chat2">Chat 2</a></li>
   </ul>
   
-  <div class="tab-content">
+  <div id="msgs" class="tab-content">
     <div id="chat1" class="tab-pane fade in active">
       <h3>chat1</h3>
       <p></p>
@@ -156,5 +156,6 @@ Final Balance<br><br>
     <script src="docs.js"></script>
     <script src="points.js"></script>
     <script src="db.js"></script>
+    <script src="messages.js"></script>
   </body>
 </html>
