--- a/beta/index.html
+++ b/beta/index.html
@@ -93,21 +93,13 @@ Final Balance<br><br>
 <div style="display: none;" id="messages">
     <h3>Messages</h3><br>
   
+  <p id="no-conversations">You have no conversations.</p>
+    
  <ul id="tabs" class="nav nav-pills">
-    <li><a data-toggle="pill" href="#chat1">Chat 1</a></li>
-    <li><a data-toggle="pill" href="#chat2">Chat 2</a></li>
   </ul>
   
   <div id="msgs" class="tab-content">
-    <div id="chat1" class="tab-pane fade in active">
-      <h3>chat1</h3>
-      <p></p>
-    </div>
-    
-    <div id="chat2" class="tab-pane fade">
-      <h3>chat2</h3>
-      <p></p>
-    </div>
+  
   </div><br>
   
   <button onclick="newConversation()" class="btn btn-primary">New Conversation</button>
