--- a/beta/index.html
+++ b/beta/index.html
@@ -99,7 +99,7 @@ Final Balance<br><br>
   
   <div id="msgs" class="tab-content">
   
-  </div><br>
+  </div><br><br>
   
   <button onclick="newConversation()" class="btn btn-primary">New Conversation</button>
   <button onclick="removeConversation()" class="btn btn-danger">Remove Conversation</button>
