--- a/beta/index.html
+++ b/beta/index.html
@@ -30,6 +30,8 @@
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="?app=4">New App <span class="glyphicon glyphicon-plus"></span></a></li>
               </ul>
             </li>
           </ul>
