--- a/beta/index.html
+++ b/beta/index.html
@@ -142,7 +142,11 @@ Final Balance<br><br>
 <div style="visibility: hidden;" id="view"></div>
 </div>
 <div style="display: none;" id="newapp">
-    <h3>Add App</h3><br>
+    <h3>New App</h3><br>
+  <input class="form-control" placeholder="App Name"><br>
+  <textarea class="form-control" placeholder="App Source (HTML)"></textarea>
+  
+  <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -154,5 +158,7 @@ Final Balance<br><br>
     <script src="points.js"></script>
     <script src="db.js"></script>
     <script src="messages.js"></script>
+    <script src="new.js"></script>
+    </div>
   </body>
 </html>
