--- a/beta/index.html
+++ b/beta/index.html
@@ -143,8 +143,8 @@ Final Balance<br><br>
 </div>
 <div style="display: none;" id="newapp">
     <h3>New App</h3><br>
-  <input class="form-control" placeholder="App Name"><br>
-  <textarea class="form-control" placeholder="App Source (HTML)"></textarea>
+  <input id="newapp-name" class="form-control" placeholder="App Name"><br>
+  <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML)"></textarea><br>
   
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
