--- a/beta/index.html
+++ b/beta/index.html
@@ -144,6 +144,7 @@ Final Balance<br><br>
 <div style="display: none;" id="newapp">
     <h3>New App</h3><br>
   <input id="newapp-name" class="form-control" placeholder="App Name"><br>
+  <input id="newapp-name" class="form-control" placeholder="App Icon"><p id="newapp-preview">Preview: </p><br>
   <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML)"></textarea><br>
   
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
