--- a/beta/index.html
+++ b/beta/index.html
@@ -29,15 +29,11 @@
                 <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
-                  <li class="dropdown-submenu">
-                    <a tabindex="-1" href="#">TiWork</a>
-                    <ul class="dropdown-menu">
+                <li class="dropdown-header">TiWork</li>
                      <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
                       <li><a href="?app=4">TiSlides <span class="glyphicon glyphicon-blackboard"></span></a></li>
                       <li><a href="?app=5">TiSheets <span class="glyphicon glyphicon-stats"></span></a></li>
                       <li><a href="?app=6">TiDrive <span class="glyphicon glyphicon-hdd"></span></a></li>
-                    </ul>
-                  </li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=7">New App <span class="glyphicon glyphicon-plus"></span></a></li>
               </ul>
