--- a/beta/index.html
+++ b/beta/index.html
@@ -147,7 +147,7 @@ Final Balance<br><br>
     <h3>TiContacts</h3><br>
   <div id="ticontacts-contacts">
     You have no contacts.
-  </div>
+  </div><br>
   
   <h3>Add Contact</h3>
   <input id="ticontacts-user" class="form-control" placeholder="Username"><br>
