--- a/beta/index.html
+++ b/beta/index.html
@@ -31,7 +31,6 @@
                 <li><a href="?app=2">Messages <span class="glyphicon glyphicon-send"></span></a></li>
                 <li class="dropdown-header">TiWork</li>
                      <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
-                     <li><a href="?app=4">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=7">New App <span class="glyphicon glyphicon-plus"></span></a></li>
               </ul>
@@ -87,6 +86,7 @@ setInterval(changeName, 50)
 
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
+<a href="http://microify.com/1zrV"><button class="btn btn-primary">Watch ads to earn 10 TiPoints</button></a><br>
    
  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Points</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
@@ -142,19 +142,6 @@ Final Balance<br><br>
 </div>
 </div>
 <div style="visibility: hidden;" id="view"></div>
-</div>
-<div style="display: none;" id="ticontacts">
-    <h3>TiContacts</h3><br>
-  <div id="ticontacts-contacts">
-    You have no contacts.
-  </div><br>
-  
-  <h3>Add Contact</h3>
-  <input id="ticontacts-user" class="form-control" placeholder="Username"><br>
-  
-  <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
-  
-  <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
 </div>
 <div style="display: none;" id="newapp">
     <h3>New App</h3><br>
