--- a/reward.html
+++ b/reward.html
@@ -10,6 +10,6 @@
     var points = localStorage.points;
     points ++;
     localStorage.points = points;
-    window.location.href = "index.html";
+    window.location.href = "/beta/index.html";
   </script>
 </html>
