--- a/reward.html
+++ b/reward.html
@@ -5,7 +5,8 @@
   <title>Points Loading . . .</title>
   </head>
   <body>
-  </body<
+    <h1>Points Loading . . .</h1>
+  </body>
   <script>
     var points = localStorage.points;
     points ++;
