--- a/reward.html
+++ b/reward.html
@@ -11,6 +11,6 @@
     var points = localStorage.points;
     points ++;
     localStorage.points = points;
-    window.location.href = "/beta/index.html";
+    window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
   </script>
 </html>
