--- a/reward.html
+++ b/reward.html
@@ -9,8 +9,8 @@
   </body>
   <script>
     var points = localStorage.points;
-    points ++;
+    var points = Number(points) + 10
     localStorage.points = points;
-    window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
+    window.location.href = "/beta/index.html";
   </script>
 </html>
