--- a/beta/index.html
+++ b/beta/index.html
@@ -155,6 +155,11 @@ Final Balance<br><br>
   <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
+  
+   <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</div>
 </div>
 <div style="display: none;" id="newapp">
     <h3>New App</h3><br>
