--- a/beta/index.html
+++ b/beta/index.html
@@ -96,17 +96,10 @@ Final Balance<br><br>
 <div style="display: none;" id="messages">
     <h3>Messages</h3><br>
   
-  <p id="no-conversations">You have no conversations.</p>
+  <p id="no-conversations">Add people to your <a href="index.html?app=4">TiContacts</a> to message them.</p>
     
- <ul id="tabs" class="nav nav-pills">
-  </ul>
-  
-  <div id="msgs" class="tab-content">
-  
-  </div><br><br>
-  
-  <button onclick="newConversation()" class="btn btn-primary">New Conversation</button>
-  <button onclick="removeConversation()" class="btn btn-danger">Remove Conversation</button>
+ <ul id="tabs" class="nav nav-pills"></ul> 
+ <div id="msgs" class="tab-content"></div><br><br>
   
  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Messages</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
