--- a/beta/index.html
+++ b/beta/index.html
@@ -147,6 +147,8 @@ Final Balance<br><br>
   
   <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
   
+  <p id="ticontacts-error"></p>
+  
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
   
    <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
