--- a/beta/index.html
+++ b/beta/index.html
@@ -147,7 +147,7 @@ Final Balance<br><br>
   
   <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
   
-  <p id="ticontacts-error"></p>
+  <p id="ticontacts-error" style="color: red;"></p>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
   
