--- a/reward.html
+++ b/reward.html
@@ -5,7 +5,7 @@
   <title>Points Loading . . .</title>
   </head>
   <body>
-    <h1>Points Loading . . .</h1>
+    <p>Points Loading . . .</p>
   </body>
   <script>
     if (document.cookie("rewardCheck") == "1038492020") {
