--- a/reward.html
+++ b/reward.html
@@ -8,7 +8,7 @@
     <p>Points Loading . . .</p>
   </body>
   <script>
-    if (document.cookie("rewardCheck") == "1038492020") {
+    if (document.getCookie("rewardCheck") == "1038492020") {
       var points = localStorage.points;
       var points = Number(points) + 10
       localStorage.points = points;
