--- a/beta/index.html
+++ b/beta/index.html
@@ -87,7 +87,7 @@ setInterval(changeName, 50)
 
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
-<a href="http://microify.com/1zrV"><button class="base btn" onClick()="document.cookie = 'rewardCheck = 1038492020'">Earn 10 TiPoints</button></a><br>
+<a href="http://microify.com/1zrV"><button class="btn btn-primary" onClick()="document.cookie = 'rewardCheck = 1038492020'">Watch Ads to Earn TIPoints</button></a><br>
    
  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Points</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
