--- a/beta/index.html
+++ b/beta/index.html
@@ -87,7 +87,7 @@ setInterval(changeName, 50)
 
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
-<a href="http://microify.com/1zrV"><button class="btn btn-primary">Watch Ads to Earn TIPoints</button></a><br>
+<button onClick()="alert("We are not responsible for any damage to your device. The ads will try to trick you into downloading viruses. Do NOT click anything except the yelow 'Skip Ad' button on the upper right corner when it appears."<br><a href="http://microify.com/1zrV">Click Here to watch ads</a>)" class="btn btn-primary">Watch Ads to Earn TIPoints</button><br>
    
  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Points</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
