--- a/beta/index.html
+++ b/beta/index.html
@@ -148,7 +148,7 @@ Final Balance<br><br>
   <script>
     function resetContacts() {
   localStorage.removeItem('contacts'); storeInDatabase("contacts",localStorage.contacts)
-      window.location.reload
+      window.location.reload();
     }
   </script>
   <h3>Add Contact</h3>
