--- a/beta/index.html
+++ b/beta/index.html
@@ -115,10 +115,10 @@ Final Balance<br><br>
     <div id="create">
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
 
-      <button onclick="saveDoc()" class="btn btn-primary">Save <span class="glyphicon glyphicon-floppy-save"></span></button>
+      <button onclick="saveDoc()" class="btn btn-primary">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
-<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit <span class="glyphicon glyphicon-edit"></span></button>
+<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
 
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
