--- a/beta/logout.html
+++ b/beta/logout.html
@@ -1,5 +1,4 @@
 <script>
-  localStorage.removeItem("name");
-  localStorage.removeItem("access");
+  window.localStorage.clear();
   window.location.href = "login.html";
 </script>
