--- a/beta/index.html
+++ b/beta/index.html
@@ -111,6 +111,7 @@ Final Balance<br><br>
 
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
+  <div id="loading-bar" class="progress-bar progress-bar active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="display: none; width: 0%"></div>
   <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
