--- a/beta/index.html
+++ b/beta/index.html
@@ -87,7 +87,7 @@ setInterval(changeName, 50)
 
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
-   <a href="http://microify.com/1zrV"><button onclick="alertAds()"class="btn btn-primary">Watch Ads to Earn TIPoints</button></a><br>
+   <a href="http://microify.com/1zrV"><button onclick="alertAds()"class="btn btn-primary">Watch Ads to Earn TiPoints</button></a><br>
    <script>function alertAds() { alert("We are not responsible for any damage to your device. Some ads may link to viruses. If it says that you have an outdated browser or that 'your download is ready' DO NOT CLICK IT! In the top right corner there will be a countdown. When it's over there will be a yellow 'skip ad'button. Click it to recieve your Ti Points.") }
    </script>
    
