--- a/beta/index.html
+++ b/beta/index.html
@@ -88,6 +88,7 @@ setInterval(changeName, 50)
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
    <a href="http://microify.com/1zrV"><button onclick="alertAds()"class="btn btn-primary">Watch Ads to Earn TiPoints</button></a><br>
+<script>
 function alertAds() {
   alert("We are not responsible for any damage to your device. Some ads may link to viruses.\n\nIf it says that you have an outdated browser or that YOUR DOWNLOAD IS READY, DO NOT CLICK IT!\n\nIn the top right corner there will be a countdown. When it's over there will be a yellow Skip Ad button. Click it to recieve your TiPoints.")
 }
