--- a/beta/index.html
+++ b/beta/index.html
@@ -102,9 +102,11 @@ function alertAds() {
 <div style="display: none;" id="messages">
     <h3>TiChat</h3><br>
   Chat Password<br>
-  <input id="chat" class="form-control">
-  <button onclick="joinChat()" class="btn btn-primary">Create/Join Chat</button>
+
 </div>
+  
+    <input id="chat" class="form-control" style="display: none;"><br>
+    <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary">Create/Join Chat</button>
  
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
