--- a/beta/index.html
+++ b/beta/index.html
@@ -106,7 +106,7 @@ function alertAds() {
 </div>
   
     <input id="chat" class="form-control" style="display: none;"><br>
-    <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary">Create/Join Chat</button>
+    <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Create/Join Chat</button>
  
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
