--- a/beta/index.html
+++ b/beta/index.html
@@ -156,8 +156,10 @@ function alertAds() {
 </div>
   
      <div id="settings">
-       Background Img<br>
-      <input class="form-control" type="text" id="backgroundImg">
+       <h3>Settings</h3><br>
+       Background Image<br>
+      <input class="form-control" type="text" id="backgroundImg"><br>
+      <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
