--- a/beta/index.html
+++ b/beta/index.html
@@ -155,7 +155,7 @@ function alertAds() {
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
 </div>
   
-     <div id="settings">
+     <div id="settings" style="display: none;">
        <h3>Settings</h3><br>
        Background Image<br>
       <input class="form-control" type="text" id="backgroundImg"><br>
