--- a/beta/index.html
+++ b/beta/index.html
@@ -159,9 +159,18 @@ function alertAds() {
        <h3>Settings</h3><br>
        Background Image<br>
       <input class="form-control" type="text" id="backgroundImg"><br>
+       
        Bar Color<br>
       <input id="barColor" class="jscolor form-control" value="2296f3"><br>
       <button onclick="updateSettings()" class="btn btn-success">Save</button>
+       
+       <select id="form-control">
+          <option value="red">Red</option>
+          <option value="orange">Orange</option>
+          <option value="yellow">Yellow</option>
+          <option value="green">Green</option>
+          <option value="blue">Blue</option>
+      </select>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
