--- a/beta/index.html
+++ b/beta/index.html
@@ -161,7 +161,7 @@ function alertAds() {
       <input class="form-control" type="text" id="backgroundImg"><br>
        
        Bar Color<br>
-      <input id="barColor" class="jscolor form-control" value="2296f3"><br>
+      <input id="barColor" onchange="updateInput()" class="jscolor form-control" value="2296f3"><br>
       <button onclick="updateSettings()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
