--- a/beta/index.html
+++ b/beta/index.html
@@ -164,6 +164,14 @@ function alertAds() {
       <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
       <button onclick="updateSettings()" class="btn btn-success">Save</button>
   </div>
+  
+    <div id="tiles" style="display: none;">
+       <h3>Tiles</h3><br>
+       File<br>
+      <input class="form-control" type="text" id="TiFilesSearch"><br>
+      
+      <button onclick="searchFiles()" class="btn btn-primary">Search</button>
+  </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
 </div>
