--- a/beta/index.html
+++ b/beta/index.html
@@ -190,6 +190,7 @@ function alertAds() {
     <script src="new.js"></script>
     <script src="contacts.js"></script>
     <script src="settings.js"></script>
+    <script src="tiles.js"></script>
     </div>
   </body>
 </html>
