--- a/beta/index.html
+++ b/beta/index.html
@@ -170,7 +170,7 @@ function alertAds() {
        File<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       
-      <button onclick="searchFiles()" class="btn btn-primary">Search</button><br>
+      <button onclick="searchFiles()" class="btn btn-primary">Search</button><br><br>
       <button onclick="addFile()" class="btn btn-primary">Store</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
